[package]
name = "audio-record"
version = "0.1.0"
authors = ["Charlie Stanton <charlie@shtanton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
hound = "3.4.0"
serde = {version = "1.0.111", features = ["derive"]}
serde_json = "1.0.53"
