[package]
name = "listen"
version = "0.1.1"
authors = ["Charlie Stanton <charlie@shtanton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
hound = "3.4.0"
iced = "0.1.1"
iced_native = "0.2.2"
iced_wgpu = "0.2.3"

[dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]
